# uol-messenger

./: CNAME  README.md  codigo-fonte.html  como-funciona.html  index.html  instalar.html  linux-e-mac-os.html  linux-e-os-x.html  perguntas-frequentes.html  plugins-ex-helloworld-conf.html  plugins-ex-helloworld-inst.html  sobre.html
lib/: libboost_signals-vc80-mt-1_33.lib  libboost_signals-vc80-mt-gd-1_33.lib  libboost_thread-vc80-mt-1_33.lib  libboost_thread-vc80-mt-gd-1_33.lib
src/: UIM.sln  uol-shared-libs.sln
src/Settings/: AbstractSettings.cpp  AbstractSettings.h  ISettings.h  ReadMe.txt  Settings.cpp  Settings.vcproj  SettingsFactory.cpp  SettingsFactory.h  XmlSettings.cpp  XmlSettings.h  stdafx.h
src/Settings/Settings/: Settings.sln
src/Settings/Test/: Test.cpp  Test.vcproj  stdafx.h
src/cryptopp/: cryptopp552.sln
src/libuolfone/: libuolfone.sln
src/libuolfone/wengophone-ng/current/libs/owpixertool/: CMakeLists.txt  pixertool.vcproj
src/libuolfone/wengophone-ng/current/libs/owpixertool/include/pixertool/: directx-pixertool.h  ffmpeg-pixertool.h  pixertool.h
src/libuolfone/wengophone-ng/current/libs/owpixertool/src/: pixertool.cpp
src/libuolfone/wengophone-ng/current/libs/owpixertool/src/ffmpeg/: ffmpeg-pixertool.c
src/libuolfone/wengophone-ng/current/libs/owwebcam/: CMakeLists.txt  webcam.vcproj
src/libuolfone/wengophone-ng/current/libs/owwebcam/include/webcam/: DefaultWebcamDriverFactory.h  DirectXWebcamDriver.h  IWebcamDriver.h  V4LWebcamDriver.h  WebcamDriver.h  WebcamDriverFactory.h  webcam.h
src/libuolfone/wengophone-ng/current/libs/owwebcam/src/: WebcamDriver.cpp
src/libuolfone/wengophone-ng/current/libs/owwebcam/src/directx/: DirectXWebcamDriver.cpp  DirectXWebcamUtils.cpp
src/libuolfone/wengophone-ng/current/libs/owwebcam/src/quicktime/: QuicktimeWebcamDriver.cpp
src/libuolfone/wengophone-ng/current/libs/owwebcam/src/v4l/: V4LWebcamDriver.cpp
src/libuolfone/wengophone-ng/current/libs/owwebcam/tests/multi-visu/: CMakeLists.txt
src/libuolfone/wengophone-ng/current/libs/owwebcam/tests/visu/: CMakeLists.txt  webcam_test.h
src/libuolfone/wengophone-ng/current/libs/owwebcam/tests/visu-c/: CMakeLists.txt  webcam_test.h
src/util/: AutoTimer.cpp  AutoTimer.h  DataObject.cpp  DataObject.h  DbgUtil.h  DebugStackWalk.cpp  DebugStackWalk.h  DelayExecution.cpp  DirectoryEnumerator.h  DllModule.cpp  DllModule.h  DropSource.cpp  DropSource.h  DropTarget.h  EnumFormat.cpp  EnumFormat.h  HighPerformanceCounter.cpp  HighPerformanceCounter.h  HttpParamCodec.cpp  HttpParamCodec.h  IRunnable.h  IRunnableJob.h  ISpecialFolder.cpp  ISpecialFolder.h  InternetHandle.h  JobThread.cpp  JobThread.h  MessageLoopThread.cpp  MessageLoopThread.h  MinDependencySpecialFolder.cpp  MinDependencySpecialFolder.h  ProcessSnapshot.h  ReadMe.txt  SpecialFolderException.cpp  SpecialFolderException.h  TernarySearchTree.cpp  TernarySearchTree.h  TernarySearchTreeVisitor.cpp  TernarySearchTreeVisitor.h  Thread.cpp  (+21 more)
src/zip_util/: zip_util.sln
(+2215 files in other folders)
